--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
   },
   "homepage": "https://github.com/Wojtec/star-warsAPI#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "node-fetch": "^2.6.1",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
-    "@types/mongoose": "^5.10.1"
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.1",
+    "@types/node-fetch": "^2.5.7"
   }
 }
