--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "typescript": "^4.1.2"
   },
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
+    "@types/node-cache": "^4.2.5",
     "@types/node-fetch": "^2.5.7"
   }
 }
