--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node ./src/server.ts",
-    "dev": "tsc  && nodemon ./dist/index.js"
+    "test": "ts-node ./src/index.ts",
+    "start": "tsc  && nodemon ./dist/index.js",
+    "build": "tsc -b",
+    "dev": "tsc -b && nodemon ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.1",
     "@types/node-cache": "^4.2.5",
-    "@types/node-fetch": "^2.5.7"
+    "@types/node-fetch": "^2.5.7",
+    "nodemon": "^2.0.6"
   }
 }
